# e-commerce-order-tracking-and-performance-dashboard

./: README.md
backend/: Dockerfile
backend/.devcontainer/: devcontainer.json
backend/assets/: entrypoint.sh  main.py  pyproject.toml
backend/assets/source/: database.py  dependencies.py  enums.py  makefake.py  models.py  openapi.py  schemas.py  utils.py
database/: .env  Dockerfile
elasticsearch/: Dockerfile
frontend/: .dockerignore  Dockerfile
frontend/.devcontainer/: devcontainer.json
frontend/assets/: entrypoint.sh  package.json  pnpm-lock.yaml
frontend/assets/app/: layout.tsx  page.tsx
frontend/assets/app/api/health/: route.ts
frontend/assets/app/customers/: page.tsx
frontend/assets/app/orders/: page.tsx
frontend/assets/app/products/: page.tsx
frontend/assets/components/: dashboard.tsx  main_content.tsx  sidebar.tsx
frontend/assets/sdk/: sdk.gen.ts  types.gen.ts
gateway/: Dockerfile
integration/: README.md  compose.py  do.py  docker-compose.yml  utils.py
kibana/: Dockerfile
logstash/: Dockerfile
logstash/pipeline/: logstash.conf
